--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <div class="banner">
             <h1 class="banner-heading"> Welcome to Metro Hotel</h1>
             <p class="banner-paragraph">Make your life luxerious</p>
-            <button class="banner-button">Check Out</button>
+            <button class="banner-button"><a href="https://rzp.io/l/LzHl3RRX" target="_blank"
+                            style="text-decoration: none;color: #b85d1c;"></a></button>
         </div>
 
     </header>
