--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="icon" href="the spark.png">
+    <link rel="icon" href="the spart.png">
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -37,6 +37,9 @@
             </label>
 
             <ul class="social-icons-list">
+                <li>
+                    <a href="https://www.thesparksfoundationsingapore.org/" target="_blank" class="social-link"><img src="the spart.png"style="wide: 32px; height:32px; " alt=""></i></a>
+                </li>
                 <li>
                     <a href="https://github.com/JAGAHPEE/" target="_blank" class="social-link"><i class="fa-brands fa-github"></i></a>
                 </li>
@@ -110,7 +113,7 @@
             <h1 class="banner-heading"> Welcome to Metro Hotel</h1>
             <p class="banner-paragraph">Make your life luxerious</p>
             <button class="banner-button"><a href="https://rzp.io/l/LzHl3RRX" target="_blank"
-                            style="text-decoration: none;color: #b85d1c;"></a></button>
+                style="text-decoration: none;color: #b85d1c;">Check Out</a></button>
         </div>
 
     </header>
