--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- Navigation -->
         <div class="navigation">
             <div class="navigation-header">
-                <h1 class="navigation-heading">Grand Hotal</h1>
+                <h1 class="navigation-heading">Metro Hotel</h1>
                 <form action="" class="navigation-search">
                     <input type="text" name="" id="" class="navigation-search-input" placeholder="Search..">
                     <button class="navigation-search-btn">
