--- a/index.html
+++ b/index.html
@@ -75,22 +75,22 @@
             </div>
             <ul class="navigation-list">
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">home</a>
+                    <a href="#item-1" class="navigation-link">home</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">about us</a>
+                    <a href="#item-2" class="navigation-link">about us</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">Rooms</a>
+                    <a href="#item-3" class="navigation-link">Rooms</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">events</a>
+                    <a href="#item-4" class="navigation-link">events</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">customers</a>
+                    <a href="#item-5" class="navigation-link">customers</a>
                 </li>
                 <li class="navigation-item">
-                    <a href="#" class="navigation-link">contact</a>
+                    <a href="#item-6" class="navigation-link">contact</a>
                 </li>
             </ul>
             <div class="copyright">
@@ -101,7 +101,7 @@
     </div>
     <!-- End of nav bar -->
     <!-- Header -->
-    <header class="header">
+    <header class="header" id="item-1">
         <div class="brand">
             <img src="Logo.png" width="80px">
             <h3 class="hotal-heading">
@@ -112,14 +112,13 @@
         <div class="banner">
             <h1 class="banner-heading"> Welcome to Metro Hotel</h1>
             <p class="banner-paragraph">Make your life luxerious</p>
-            <button class="banner-button"><a href="https://rzp.io/l/LzHl3RRX" target="_blank"
-                style="text-decoration: none;color: #b85d1c;">Check Out</a></button>
+            <a href="#item-2"><button class="banner-button">Check Out</button></a>
         </div>
 
     </header>
     <!-- End of Header -->
     <!-- About us -->
-    <section class="about-us">
+    <section class="about-us " id="item-2" >
         <div class="about-us-content">
 
             <h1 class="about-us-heading">About Us</h1>
@@ -134,10 +133,10 @@
                 libero dolore distinctio provident minus dicta unde, voluptatum at, facere corporis ducimus.
                 Suscipit eius maxime fugiat nihil! Obcaecati, fugiat hic.</p>
 
-            <button class="about-us-btn">
+            <a href="#item-3"><button class="about-us-btn"  >
                 Read More
                 <i class="fa-solid fa-angles-right btn-arrow"></i>
-            </button>
+            </button></a>
         </div>
 
         <div class="about-us-images">
@@ -153,7 +152,7 @@
 
 
     <!-- Rooms -->
-    <section class="rooms">
+    <section class="rooms" id="item-3" >
         <div class="common-header">
             <h1 class="common-heading">
                 Rooms in Metro Hotel
@@ -205,13 +204,13 @@
             </div>
         </div>
         <div class="rooms-btn-wrapper">
-            <button class="rooms-btn">Check All Rooms</button>
+            <a href="#item-5"><button class="rooms-btn">Check All Rooms</button></a>
         </div>
 
     </section>
     <!-- End of Rooms -->
     <!-- Customers -->
-    <section class="customers">
+    <section class="customers" id="item-5" >
         <div class="common-header">
             <h1 class="common-heading">
                 Ous Customers
@@ -252,7 +251,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <footer class="footer" id="item-6">
         <div class="main-part">
             <div class="footer-list-wrapper">
                 <h3 class="hotel-heading">Metro Hotel</h3>
